# skiff-language

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json
compiler/: Cargo.toml
compiler/compiled/: Cargo.toml
compiler/compiled/src/: lib.rs  projection_input.rs
compiler/core/: Cargo.toml
compiler/core/src/: api_spec.rs  export_config.rs  file_ir_identity.rs  id.rs  json_utils.rs  lib.rs  naming.rs  package_export_resolver.rs  package_interface_methods.rs  package_publication_abi.rs  path_safety.rs  prelude_registry.rs  registry_helpers.rs  source_role.rs  spawn_targets.rs  type_graph.rs  type_ref.rs  type_syntax.rs
compiler/driver/: lib.rs  main.rs  service_publication_tests.rs  test_support.rs
compiler/driver/input/: compile_input.rs  mod.rs  package_job.rs  service_dependencies.rs  service_job.rs  service_packages.rs  source_graph.rs  test_rules.rs
compiler/driver/pipeline/: mod.rs  projection_context.rs
compiler/driver/shared/: mod.rs  operation_abi_identity.rs  publication_error.rs
compiler/driver/source_compile/: mod.rs
compiler/driver/test_support/: package_test_artifacts.rs  package_units.rs  project_fixtures.rs  service_test_artifacts.rs
compiler/emission/: Cargo.toml
compiler/emission/src/: error.rs  lib.rs
compiler/input/: Cargo.toml
compiler/input-model/: Cargo.toml
compiler/input-model/src/: compile_input.rs  compile_policy.rs  dependencies.rs  lib.rs  manifest.rs  raw_source.rs  resources.rs  service_ingress.rs
compiler/input/src/: api_spec.rs  api_yml.rs  compile_policy.rs  dependencies.rs  error.rs  export_config.rs  input.rs  lib.rs  manifest.rs  package_job.rs  package_source_helpers.rs  package_sources.rs  publication.rs  raw_sources.rs  registry_helpers.rs  resources.rs  service_dependencies.rs  service_ingress.rs  service_job.rs  service_packages.rs  test_rules.rs
compiler/lowering/: Cargo.toml
compiler/lowering/src/: callable_return_types.rs  db_lowering.rs  declaration_lowering.rs  dependency_operation_indexes.rs  entrypoint_abi.rs  entrypoint_abi_model.rs  executable_declaration_lowering.rs  external_refs.rs  function_lowering.rs  lib.rs  lowered.rs  publication_local_refs.rs  source_file_lowering.rs  source_metadata.rs  source_unit_lowering.rs  storage_projection.rs  suspend_analysis.rs  type_inference.rs  type_lowering.rs
compiler/projection/: Cargo.toml
compiler/projection-input/: Cargo.toml
compiler/projection-input/src/: lib.rs
compiler/projection/src/: config.rs  context.rs  error.rs  lib.rs  package_exports.rs  package_unit_artifacts.rs  prelude.rs  prelude_metadata.rs  publication_visible_types.rs  recoverable_boundary.rs  runtime_manifest.rs  runtime_manifest_model.rs  schema_metadata.rs  service_config.rs  source_map.rs  source_symbol.rs  std_type_refs.rs
compiler/source/: Cargo.toml
compiler/source/src/: alias_resolution.rs  api.rs  api_seed.rs  api_yml.rs  compile_model.rs  config_metadata.rs  config_requirements.rs  dependency_operation_facts.rs  expression_model.rs  expression_type_model.rs  lib.rs  linked_facts.rs  linked_publication.rs  name_resolution_model.rs  package_dependency_facts.rs  package_export_resolver.rs  package_rules.rs  provider_rules.rs  remote_public_instance.rs  reserved_names.rs  runtime_type_projection.rs  semantics.rs  service_ingress.rs  service_package_facts.rs  service_rules.rs  service_storage_rules.rs  source_file_facts.rs  source_graph.rs  source_identity.rs  source_name_resolution.rs  source_rules.rs  test_rules.rs  type_resolution_model.rs  type_symbol_index.rs
compiler/tests/: artifact_model_conformance.rs  artifact_output.rs  compiler_command.rs  config_shape.rs  connect_mongo_package.rs  db_process_metadata.rs  http_routes.rs  package_imports.rs  package_std_schema.rs  prelude_std_schema.rs  profile_overlay.rs  provider_connect_packages.rs  provider_function_syntax.rs  publication_resources.rs  root_path_references.rs  runtime_slots.rs  service_config_overlay.rs  service_conformance.rs  std_package_imports.rs  streams_emit.rs  test_artifact_identity.rs
compiler/tests/common/: artifacts.rs  cli_command.rs  mod.rs
runtime/: .gitignore  Cargo.toml  README.md  runtime.example.yml
runtime/activation/: Cargo.toml
runtime/activation/src/: activation.rs  cache.rs  lib.rs  requirements.rs
runtime/benches/: interpreter_budget.rs
runtime/benches/fixtures/: sample_sitemap_prompt_sitemap.json
runtime/boundary/: Cargo.toml
runtime/boundary/src/: binary.rs  config.rs  contract.rs  date_value.rs  db.rs  error.rs  file.rs  http.rs  json.rs  json_convert.rs  lib.rs  map_key.rs  payload.rs  plan.rs  recoverable.rs  stream.rs  type_descriptor.rs  value.rs
runtime/capability-context/: Cargo.toml
runtime/capability-context/src/: actor.rs  cancellation.rs  capability_error.rs  config.rs  db.rs  execution_control.rs  file.rs  http.rs  lib.rs  native_projection.rs  outbound_control.rs  outbound_request.rs  outbound_response.rs  request_payload.rs  response.rs  stream.rs  telemetry.rs  time.rs  (+1 more)
runtime/driver/: config.rs  config_view.rs  error.rs  http_boundary.rs  lib.rs  main.rs  telemetry.rs
runtime/eval/: Cargo.toml
runtime/host/: Cargo.toml
runtime/linked-program/: Cargo.toml
runtime/linked-type-plan/: Cargo.toml
runtime/linker/: Cargo.toml
runtime/live-tests/: runtime-live.config.example.json  service.yml
runtime/loader/: Cargo.toml
runtime/model/: Cargo.toml
runtime/native/: Cargo.toml
runtime/native-contract/: Cargo.toml
runtime/package-test/: Cargo.toml
runtime/request/: Cargo.toml
runtime/request-contract/: Cargo.toml
runtime/scripts/: smoke-ws.mjs  websocket-fixture-smoke-playwright.mjs
runtime/service-db/: Cargo.toml
runtime/transport/: Cargo.toml
test-runner/: Cargo.toml
test-runner/src/: artifacts.rs  doubles.rs  lib.rs  main.rs  package.rs  root_paths.rs  runtime_process.rs  service.rs  service_publish.rs  sources.rs  tests.rs  types.rs  visibility.rs
test-runner/tests/: test_runner_doubles.rs  test_runner_live_smoke.rs  test_runner_package.rs  test_runner_package_visibility.rs  test_runner_service.rs
(+783 files in other folders)
