[workspace]
resolver = "2"
members = [
  "artifact-model",
  "artifact-identity",
  "syntax",
  "compiler/core",
  "compiler/input-model",
  "compiler/input",
  "compiler/source",
  "compiler/lowering",
  "compiler/compiled",
  "compiler/projection-input",
  "compiler/projection",
  "compiler/emission",
  "compiler",
  "runtime",
  "runtime/activation",
  "runtime/boundary",
  "runtime/capability-context",
  "runtime/eval",
  "runtime/host",
  "runtime/linked-type-plan",
  "runtime/linked-program",
  "runtime/linker",
  "runtime/loader",
  "runtime/model",
  "runtime/native",
  "runtime/native-contract",
  "runtime/package-test",
  "runtime/request-contract",
  "runtime/service-db",
  "runtime/request",
  "runtime/transport",
  "test-runner",
]
