[package]
name = "skiff-compiler-input-model"
version = "0.1.0"
edition = "2021"
publish = false

[lints.clippy]
too_many_lines = "warn"

[dependencies]
skiff-artifact-model = { path = "../../artifact-model" }
skiff-compiler-core = { path = "../core" }
skiff-syntax = { path = "../../syntax" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
