[package]
name = "skiff-compiler-lowering"
version = "0.1.0"
edition = "2021"
publish = false

[lints.clippy]
too_many_lines = "warn"

[features]
default = []

[dependencies]
skiff-artifact-identity = { path = "../../artifact-identity" }
skiff-artifact-model = { path = "../../artifact-model" }
skiff-compiler-core = { path = "../core" }
skiff-compiler-source = { path = "../source" }
skiff-syntax = { path = "../../syntax" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
