[package]
name = "skiff-compiler-projection"
version = "0.1.0"
edition = "2021"
publish = false

[lints.clippy]
too_many_lines = "warn"

[dependencies]
skiff-artifact-identity = { path = "../../artifact-identity" }
skiff-artifact-model = { path = "../../artifact-model" }
skiff-compiler-core = { path = "../core" }
skiff-compiler-projection-input = { path = "../projection-input" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
hex = "0.4"
sha2 = "0.10"
thiserror = "2.0"
