[package]
name = "skiff-runtime-boundary"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
test-support = []

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
skiff-artifact-model = { path = "../../artifact-model" }
skiff-runtime-model = { path = "../model" }
thiserror = "2.0"
time = { version = "0.3.47", features = ["formatting", "parsing"] }

[dev-dependencies]
skiff-runtime-model = { path = "../model", features = ["test-support"] }
