[package]
name = "skiff-runtime-capability-context"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
test-support = []

[dependencies]
bytes = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skiff-artifact-model = { path = "../../artifact-model" }
skiff-runtime-boundary = { path = "../boundary" }
skiff-runtime-model = { path = "../model" }
skiff-runtime-native-contract = { path = "../native-contract" }
tokio = { version = "1.44", features = ["macros", "rt", "sync", "time"] }
