[package]
name = "skiff-runtime-host"
version = "0.1.0"
edition = "2021"
publish = false

[lints.clippy]
too_many_lines = "warn"

[features]
default = []
test-support = [
  "skiff-runtime-capability-context/test-support",
  "skiff-runtime-eval/test-support",
  "skiff-runtime-linker/test-support",
  "skiff-runtime-linked-type-plan/test-support",
]

[dependencies]
anyhow = "1.0"
bytes = "1.10"
futures-util = "0.3"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
skiff-artifact-identity = { path = "../../artifact-identity" }
skiff-artifact-model = { path = "../../artifact-model" }
skiff-runtime-activation = { path = "../activation" }
skiff-runtime-boundary = { path = "../boundary" }
skiff-runtime-capability-context = { path = "../capability-context" }
skiff-runtime-eval = { path = "../eval" }
skiff-runtime-linked-program = { path = "../linked-program" }
skiff-runtime-linked-type-plan = { path = "../linked-type-plan" }
skiff-runtime-linker = { path = "../linker" }
skiff-runtime-loader = { path = "../loader" }
skiff-runtime-model = { path = "../model" }
skiff-runtime-native = { path = "../native" }
skiff-runtime-native-contract = { path = "../native-contract" }
skiff-runtime-package-test = { path = "../package-test" }
skiff-runtime-request = { path = "../request" }
skiff-runtime-transport = { path = "../transport" }
thiserror = "2.0"
time = { version = "0.3.47", features = ["formatting", "parsing"] }
tokio = { version = "1.44", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.26"
tracing = "0.1"
url = "2.5"
uuid = { version = "1.16", features = ["v4"] }

[dev-dependencies]
mongodb = "3.2"
skiff-runtime-boundary = { path = "../boundary", features = ["test-support"] }
skiff-runtime-capability-context = { path = "../capability-context", features = ["test-support"] }
skiff-runtime-eval = { path = "../eval", features = ["test-support"] }
skiff-runtime-linker = { path = "../linker", features = ["test-support"] }
skiff-runtime-service-db = { path = "../service-db" }
