[package]
name = "skiff-runtime-linked-program"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skiff-artifact-model = { path = "../../artifact-model" }
skiff-runtime-model = { path = "../model" }
