[package]
name = "skiff-runtime-linker"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
test-support = []

[dependencies]
anyhow = "1.0"
hex = "0.4"
serde_json = "1.0"
sha2 = "0.10"
skiff-artifact-identity = { path = "../../artifact-identity" }
skiff-artifact-model = { path = "../../artifact-model" }
skiff-runtime-linked-program = { path = "../linked-program" }
skiff-runtime-loader = { path = "../loader" }
skiff-runtime-native-contract = { path = "../native-contract" }
thiserror = "2.0"
