[package]
name = "skiff-runtime-loader"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
skiff-artifact-identity = { path = "../../artifact-identity" }
skiff-artifact-model = { path = "../../artifact-model" }
skiff-runtime-linked-program = { path = "../linked-program" }
skiff-runtime-model = { path = "../model" }
