[package]
name = "skiff-runtime-model"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
test-support = []

[dependencies]
bytes = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skiff-artifact-model = { path = "../../artifact-model" }
thiserror = "2.0"
