[package]
name = "skiff-runtime-native"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []

[dependencies]
bytes = "1.10"
hex = "0.4"
hmac = "0.12"
serde_json = { version = "1.0", features = ["preserve_order"] }
sha1 = "0.10"
sha2 = "0.10"
skiff-runtime-boundary = { path = "../boundary" }
skiff-runtime-capability-context = { path = "../capability-context" }
skiff-runtime-model = { path = "../model" }
skiff-runtime-native-contract = { path = "../native-contract" }
thiserror = "2.0"
tokio = { version = "1.44", features = ["time"] }
uuid = { version = "1.16", features = ["v4"] }

[dev-dependencies]
skiff-artifact-model = { path = "../../artifact-model" }
skiff-runtime-boundary = { path = "../boundary", features = ["test-support"] }
