[package]
name = "skiff-runtime-request"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skiff-runtime-boundary = { path = "../boundary" }
skiff-runtime-capability-context = { path = "../capability-context" }
skiff-runtime-eval = { path = "../eval" }
skiff-runtime-linked-program = { path = "../linked-program" }
skiff-runtime-model = { path = "../model" }
skiff-runtime-request-contract = { path = "../request-contract" }
thiserror = "2.0"
time = { version = "0.3.47", features = ["formatting", "parsing"] }
