[package]
name = "skiff-runtime-service-db"
version = "0.1.0"
edition = "2021"
publish = false

[lints.clippy]
too_many_lines = "warn"

[features]
default = []
test-support = []

[dependencies]
futures-util = "0.3"
hex = "0.4"
mongodb = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
skiff-artifact-model = { path = "../../artifact-model" }
skiff-runtime-boundary = { path = "../boundary" }
skiff-runtime-capability-context = { path = "../capability-context" }
skiff-runtime-model = { path = "../model" }
thiserror = "2.0"
time = { version = "0.3.47", features = ["formatting", "parsing"] }
tokio = { version = "1.44", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.16", features = ["v4"] }
