[package]
name = "skiff-runtime-transport"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skiff-artifact-model = { path = "../../artifact-model" }
skiff-runtime-request-contract = { path = "../request-contract" }
